# koala-route

./: CITATION.cff  README.md  deleter.py  main.ipynb  main.py  pruebas.ipynb  pyproject.toml  uploader.py
config/: __init__.py  config.py  prompts.yaml  test_cases.yaml  ui_options.yaml
data/: Langchain.txt  adelaide.md  brisbane.md  canberra.md  gold_coast.md  melbourne.md  newcastle.md  perth.md  sunshine_coast.md  sydney.md  template.md  wollongong.md
modules/: __init__.py  agents.py  embeddings.py  llm.py  prompt_utils.py  vector.py
modules/agents/: __init__.py  controller_agent.py  llm_agent.py  retriever_agent.py
modules/graph/: agent_state.py  graph.py
modules/schema/: state_schema.py
webapp/: app.py  app_test.py  langgraph_runner.py  runner.py
webapp/evaluation/: evaluator.py  scenario_utils.py
