[project]
name = "rag-llm-project"
version = "0.1.0"
description = "Sistema RAG con LangChain, Hugging Face y Azure AI Search"
authors = [
    { name = "Maxim Utica Babyak", email = "maxim.ub.contacto@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [

    # --- LangChain y Hugging Face ---
    "langchain",
    "langchain-huggingface",
    "transformers",
    "tokenizers",
    "sentence-transformers",

    # --- Azure Cognitive Search ---
    "azure-search-documents",
    "azure-identity",

    # --- Soporte para LLMs locales con aceleración ---
    "torch",
    "torchvision",
    "torchaudio",
    "accelerate",

    # --- Compatibilidad y entorno ---
    "numpy<2.0",
    "ipykernel",
    "ipywidgets",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules", "config"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88