[project]
name = "koalaroute"
version = "0.1.0"
description = "Sistema RAG con LangChain, Langgraph, Hugging Face y Azure AI Search"
authors = [
    { name = "Maxim Utica Babyak", email = "maxim.ub.work@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [

    # ===============================
    # ⚙️ Core: LangChain + LangGraph
    # ===============================
    "langchain_huggingface",
    "langchain_community",
    "langgraph",

    # ===============================
    # 🤖 Modelos y LLMs (Azure OpenAI + Embeddings)
    # ===============================
    "openai",                   # Cliente oficial OpenAI/Azure OpenAI
    "sentence-transformers",   # Embeddings HuggingFace
    "tiktoken",                # Conteo de tokens
    "accelerate",              # Gestión automática de dispositivos (GPU/CPU) y ejecución eficiente

    # ===============================
    # 🔍 Azure Cognitive Search
    # ===============================
    "azure-search-documents",  # Cliente Azure Search
    "azure-identity",          # Autenticación Azure

    # ===============================
    # 📊 Métricas, similitud y cálculo
    # ===============================
    "scikit-learn",            # cosine_similarity
    "numpy<2.0",               # Compatibilidad con otras libs

    # ===============================
    # 🔧 Utilidades generales
    # ===============================
    "python-dotenv",           # Variables de entorno
    "pyyaml",

    # ===============================
    # 🌐 Webapp
    # ===============================
    "streamlit",               # Interfaz web
]

[project.optional-dependencies]

# ===============================
# ⚙️ Desarrollo local
# ===============================
dev = [
    "ipykernel",               # Jupyter support
    "ipywidgets"               # Widgets interactivos
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["modules", "modules.agents", "modules.graph", "config", "webapp"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py312']

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88
